[package]
name = "websocket_api"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]

[features]
default = ["wasm"]
wasm = ["stdweb"]

[lib]
name = "websocket_api"
path = "src/lib.rs"

[[bin]]
name = "websocket_api_web"
path = "src/web.rs"
required-features = ["wasm"]

[dependencies]
stdweb = { version = "0.2.0", optional = true }
